Day-09/ingress-argocd-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-app-ingress
 namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
