Day-09/ingress-default-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: janemils-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: janemils-app-deployment
                port:
                  number: 8000
