Day-09/ingress-monitoring-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: monitoring-ingress
 namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.local
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
                name: grafana
                port:
                  number: 80
    -  host: prometheus.local
       http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name:  prometheus-server
               port:
                 number: 80
    -  host: alertmanager.local
       http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: alertmanager
               port:
                 number: 9093
